--- a/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
@@ -13,7 +13,7 @@
         <h4 th:if="${#lists.isEmpty(eventosAtivos)}">Não há eventos ativos</h4>
         <div th:unless="${#lists.isEmpty(eventosAtivos)}" class="row holder center"></div>
         <div class="row" id="itemContainer">
-           <div th:each="evento : ${eventosAtivos}" class="col m6 s12">
+           <div th:each="evento : ${eventosAtivos}" th:if="${#strings.equals(evento.visibilidade, 'PUBLICO')} or (${#strings.equals(evento.visibilidade, 'PRIVADO')} and ${#lists.contains(evento.getOrganizadores(), pessoa)})" class="col m6 s12">
               <div class="card">
                 <div class="card-content">
 	              <span class="card-title" th:text="${evento.nome}" ></span>
