--- a/aplicacao/contest/src/main/resources/templates/revisor/revisor_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/revisor/revisor_trabalhos.html
@@ -32,8 +32,11 @@
 						<div class="card-stacked">
 							<div class="card-content">
 								<span class="card-title" th:text="${trabalho.titulo}"></span>
-								<div th:include="fragments/listar_participacoes :: listar('Revisor(es):', ${trabalho.revisores})"></div>
-								<h6 th:text="'Trilha: ' + ${trabalho.trilha.nome}"></h6>
+								<div th:include="fragments/listar_participacoes :: listar-inline('Revisor(es):', ${trabalho.revisores})"></div>
+								<div th:include="fragments/listar_participacoes :: listar-inline('Autor(es):', ${trabalho.autor})"></div>
+								<span th:utext="'&lt;strong&gt;' + 'Trilha:' + ' &lt;/strong&gt;' + ${trabalho.trilha.nome}"></span>
+								
+							
 							</div>
 							<div class="card-action" th:switch="${#lists.contains(trabalhosRevisados, trabalho.id)}">
 								<a th:case='false' th:href="@{'/revisor/' + ${trabalho.id} + '/revisar'}"
