--- a/aplicacao/contest/src/main/resources/templates/coautor/coautor_listar_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/coautor/coautor_listar_trabalhos.html
@@ -64,11 +64,15 @@
                 	<p><b>Trilha: </b><span th:text="${trabalho.trilha.nome}"></span></p>
                 	<p th:with="dataFinal=${#dates.format({trabalho.evento.PrazoRevisaoFinal},'dd/MM/YYYY')},hoje=${#dates.createToday()},data_hoje=${#dates.format({hoje},'dd/MM/YYYY')}">
 						<b>SITUAÇÃO DO ARTIGO: </b>
-						<span th:if="${trabalho.isRevisado()}  and ${data_hoje.compareTo(dataFinal) == 1}" th:text="${trabalho.status}"></span> 
-											
-						<span th:if="${trabalho.isRevisado()} and ${data_hoje.compareTo(dataFinal) le 0}"> EM REVISÃO</span>
-											
+						
+						<th:block th:if="${trabalho.isRevisado()}">
+							<span th:if="${data_hoje.compareTo(dataFinal) == 1}" th:text="${trabalho.status}"></span> 				
+							<span th:unless="${data_hoje.compareTo(dataFinal) == 1}"> EM REVISÃO</span>				
+						</th:block>
+						
 						<span th:if="${not trabalho.isRevisado()}">NÃO REVISADO</span> 
+						
+						
 											
 					</p>
                
