--- a/aplicacao/contest/src/main/resources/templates/autor/autor_listar_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_listar_trabalhos.html
@@ -93,7 +93,7 @@
 	                  	<br/>
 	                    <a th:if="${trabalho.evento.isPeriodoInicial()} or ${trabalho.evento.isPeriodoFinal()}" th:attr="href='#reenviar' + ${trabalho.id}" class="teal-text confirmar modal-trigger">Reenviar</a> 
 	                    <a th:href= "@{|/autor/file/${trabalho.id}|}" class="teal-text confirmar modal-trigger">Ver envio</a>
-	     				<a th:href= "@{|/autor/revisao/trabalho/${trabalho.id}|}" class="teal-text confirmar modal-trigger">Ver revisões</a>              	                   
+	     				<a th:if="${not evento.isPeriodoRevisao()}" th:href= "@{|/autor/revisao/trabalho/${trabalho.id}|}" class="teal-text confirmar modal-trigger">Ver revisões</a>              	                   
 	                    <a th:if="${trabalho.evento.isPeriodoFinal() AND #lists.size(trabalho.revisoes) == 0}" th:href="@{'/autor/revisao/trabalho/' + ${trabalho.id}}" class="btn disabled gray">Não revisado</a>
 						<a th:if="${trabalho.evento.isPeriodoInicial()}" th:attr="href='#modal' + ${trabalho.id}" class="red-text confirmar modal-trigger">Excluir</a>
 	                  </div>
