--- a/aplicacao/contest/src/main/resources/templates/autor/autor_revisao.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_revisao.html
@@ -25,21 +25,19 @@
 		<div class=""
 			th:include="fragments/autor_menu_navegacao :: autor_menu_navegacao"></div>
 
-		<h4 th:text="'Revisão - ' + ${titulo} "></h4>
+		<h4 th:text="${titulo} "></h4>
 
-		<div class="col s5">
-			<div class="row left">
+		<div class="row">
+			<div class="col s12">
 				<ul class="tabs">
-					<li class="tab col s3" th:each="revisao,iterStat : ${revisoes}"><a
-						class="teal-text" th:href="'#revisao' + ${iterStat.count}"
-						th:text="'Revisao '+ ${iterStat.count}"></a></li>
+					<li class="tab col s3" th:each="revisao,iterStat : ${revisoes}">
+						<a class="teal-text" th:href="'#revisao' + ${iterStat.count}"
+						th:text="'Revisao '+ ${iterStat.count}"></a>
+					</li>
 				</ul>
 			</div>
 
-			<div th:each="revisao,iterStat : ${revisoes}">				 
-				<div th:id="'revisao'+ ${iterStat.count}" class="col s12">
-				<br/><br/><br/>
-				
+			<div th:each="revisao,iterStat : ${revisoes}" th:id="'revisao'+ ${iterStat.count}" class="col s12">				 
 
 					<div class="col m6 s6">
 						<div>
@@ -117,9 +115,8 @@
 						</div>												
 					</div>
 					
-				</div>
-				
 			</div>
+				
 		</div>
 	</div>
 
@@ -132,7 +129,7 @@
 		</div>
 	</footer>
 	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<script src="../js/materialize.js"></script>
+	<script th:attr="src=@{/js/materialize.js}"></script>
 	<script type="text/javascript">
 		$(document)
 				.ready(
