Correção do dashboard e refatoracao do template

--- a/aplicacao/contest/src/main/resources/templates/autor/autor_listar_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_listar_trabalhos.html
@@ -7,7 +7,7 @@
     <div th:include="fragments/header :: header"></div>
     <div class="container page"><br/>
       <div th:include="fragments/autor_menu_navegacao :: autor_menu_navegacao"></div>
-      <h2 th:text="'Evento:' + ${evento.nome}"></h2>
+      <h2 th:if="${evento}" th:text="'Evento:' + ${evento.nome}"></h2>
       
       <div>
 		<div th:if="${trabalhoExcluido}" id="error_area" class="row chip red white-text green" th:text="#{TRABALHO_EXCLUIDO_COM_SUCESSO}">
@@ -49,7 +49,12 @@
           <div th:each="trabalho : ${listaTrabalhos}" class="card horizontal ">
         	<div class="card-stacked">
         	  
-        	  <div class="card-content"><span class="card-title" th:text="'Trabalho: ' + ${trabalho.titulo}"></span>
+        	  <div class="card-content">
+ 				<span th:if="not ${evento}" class="card-title" th:text="'Evento: ' + ${trabalho.evento.nome}"></span> <br/>
+                <span class="card-title" th:text="'Trabalho: ' + ${trabalho.titulo}"></span> <br/>
+                
+ 
+                
                 <div class="row">
                 <div class="col s4">
                 	<div th:include="fragments/listar_participacoes :: listar-clean('Autor(es):', ${trabalho.autoresDoTrabalho})"></div>
@@ -75,12 +80,12 @@
                 	<p><b>Último envio: </b><span th:text="${#dates.format(trabalho.submissoes.get(#lists.size(trabalho.submissoes) - 1).dataSubmissao,'dd/MM/yyyy')} "></span></p>
                 </div>
                 </div>
-                 
+                
               </div>
               <form th:action="@{/autor/reenviarTrabalho}"  method="POST" enctype="multipart/form-data">
 	              <div class="card-action">
-	                <div class="row">
-	                  <div th:if="${trabalho.evento.isPeriodoInicial()} or ${trabalho.evento.isPeriodoFinal()}" class="file-field input-field col m6 s6">
+	                <div class="row" th:with="podeEnviar=(${trabalho.evento.isPeriodoInicial()} or ${trabalho.evento.isPeriodoFinal()}) and ${trabalho.autor.equals(pessoa)}">
+	                  <div th:if="${podeEnviar}" class="file-field input-field col m6 s6">
 	                    <div class="btn right"><span>Escolher...</span>
 	                      <input type="file" name="file" class="multiple"/>
 	                    </div>
@@ -91,8 +96,8 @@
 	                  <div class="input-field col m6 s6">
 	                  	<small>Opções</small>
 	                  	<br/>
-	                    <a th:if="${trabalho.evento.isPeriodoInicial()} or ${trabalho.evento.isPeriodoFinal()}" th:attr="href='#reenviar' + ${trabalho.id}" class="teal-text confirmar modal-trigger">Reenviar</a> 
-	                    <a th:href= "@{|/autor/file/${trabalho.id}|}" class="teal-text confirmar modal-trigger">Ver envio</a>
+	                    <a th:if="${podeEnviar}" th:attr="href='#reenviar' + ${trabalho.id}" class="teal-text confirmar modal-trigger">Reenviar</a> 
+	                    <a th:href= "@{|/autor/file/${trabalho.id}|}" class="teal-text">Ver envio</a>
 	     				<a th:if="${not evento.isPeriodoRevisao()}" th:href= "@{|/autor/revisao/trabalho/${trabalho.id}|}" class="teal-text confirmar modal-trigger">Ver revisões</a>              	                   
 	                    <a th:if="${trabalho.evento.isPeriodoFinal() AND #lists.size(trabalho.revisoes) == 0}" th:href="@{'/autor/revisao/trabalho/' + ${trabalho.id}}" class="btn disabled gray">Não revisado</a>
 						<a th:if="${trabalho.evento.isPeriodoInicial()}" th:attr="href='#modal' + ${trabalho.id}" class="red-text confirmar modal-trigger">Excluir</a>
@@ -142,6 +147,7 @@
         <div th:if="${#lists.isEmpty(listaTrabalhos)}" class="col s4">
         	<p>Você não enviou trabalhos para esse evento</p>
         </div>
+
       </div>
       <!-- 
             <div class="row col s12 center">
