--- a/aplicacao/contest/src/main/resources/templates/autor/autor_listar_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_listar_trabalhos.html
@@ -62,8 +62,8 @@
 						<b>SITUAÇÃO DO ARTIGO: </b>
 						
 						<th:block th:if="${trabalho.isRevisado()}">
-							<span th:if="${data_hoje.compareTo(dataFinal) == 1}" th:text="${trabalho.status}"></span> 				
-							<span th:unless="${data_hoje.compareTo(dataFinal) == 1}"> EM REVISÃO</span>				
+							<span th:if="${dataFinal.compareTo(dataFinal) le 0}" th:text="${trabalho.status}"></span> 				
+							<span th:unless="${dataFinal.compareTo(dataFinal) le 0}"> EM REVISÃO</span>				
 						</th:block>
 						
 						<span th:if="${not trabalho.isRevisado()}">NÃO REVISADO</span> 					
