--- a/aplicacao/contest/src/main/resources/templates/revisor/revisor_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/revisor/revisor_trabalhos.html
@@ -41,7 +41,8 @@
 							<div class="card-action" th:switch="${#lists.contains(trabalhosRevisados, trabalho.id)}">
 								<a th:case='false' th:href="@{'/revisor/' + ${trabalho.id} + '/revisar'}"
 									class="btn white-text waves-effect waves-light btn-large">REVISAR</a>
-								<a th:case='true' class="btn white-text waves-effect waves-light btn-large light-green darken-2" th:disabled="${true}">REVISADO</a>
+								<a th:case='true' th:href="@{'/revisor/' + ${trabalho.id} + '/revisao'}"
+								class="btn white-text waves-effect waves-light btn-large light-green darken-2">REVISADO</a>
 							</div>
 						</div>
 					</div>
