--- a/aplicacao/contest/src/main/resources/templates/autor/autor_listar_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_listar_trabalhos.html
@@ -47,7 +47,8 @@
         
         <div th:if="${not #lists.isEmpty(listaTrabalhos)}" class="col s4">
           <div th:each="trabalho : ${listaTrabalhos}" class="card horizontal ">
-        	<div class="card-stacked">
+        	<div class="card-stacked" th:with="periodoInicial=${trabalho.evento.isPeriodoInicial()},
+        	periodoRevisao=${trabalho.evento.isPeriodoRevisao()}, periodoFinal=${trabalho.evento.isPeriodoFinal()}">
         	  
         	  <div class="card-content">
  				<span th:if="not ${evento}" class="card-title" th:text="'Evento: ' + ${trabalho.evento.nome}"></span> <br/>
@@ -61,24 +62,21 @@
                 </div>
                 
                 <div class="col s4">
-                	<p><b>Trilha: </b><span th:text="${trabalho.trilha.nome}"></span></p>                	                
+                	<p><strong>Trilha: </strong><span th:text="${trabalho.trilha.nome}"></span></p>                	                
                 	
-                	<p th:with="dataFinal=${#dates.format({trabalho.evento.PrazoRevisaoFinal},'dd/MM/YYYY')},hoje=${#dates.createToday()},data_hoje=${#dates.format({hoje},'dd/MM/YYYY')}">
-						<b>SITUAÇÃO DO ARTIGO: </b>
+                	<p>
+						<strong>SITUAÇÃO DO ARTIGO: </strong>
 						
+						<span th:if="${periodoInicial}">Submetido</span>
+						<span th:if="${periodoRevisao}">Em revisão</span>
+						<span th:if="${periodoFinal}" th:text="${trabalho.status} ? ${trabalho.status} : 'Não Revisado'">status</span>
 						
-						<th:block th:if="${trabalho.isRevisado()}">
-							<span th:if="${data_hoje.compareTo(dataFinal) != 1}" th:text="${trabalho.status}"></span> 				
-							<span th:unless="${data_hoje.compareTo(dataFinal) != 1}"> EM REVISÃO</span>				
-						</th:block>
-						
-						<span th:if="${not trabalho.isRevisado()}">NÃO REVISADO</span> 					
 					</p>
                               		
                 </div>
                 <div class="col s4">
-                <p><b>Número total de submissões: </b><span th:text="${#lists.size(trabalho.submissoes)}"></span></p>
-                	<p><b>Último envio: </b><span th:text="${#dates.format(trabalho.submissoes.get(#lists.size(trabalho.submissoes) - 1).dataSubmissao,'dd/MM/yyyy')} "></span></p>
+                <p><strong>Número total de submissões: </strong><span th:text="${#lists.size(trabalho.submissoes)}"></span></p>
+                	<p><strong>Último envio: </strong><span th:text="${#dates.format(trabalho.submissoes.get(#lists.size(trabalho.submissoes) - 1).dataSubmissao,'dd/MM/yyyy')} "></span></p>
                 </div>
                 </div>
                 
@@ -99,9 +97,8 @@
 	                  	<br/>
 	                    <a th:if="${podeEnviar}" th:attr="href='#reenviar' + ${trabalho.id}" class="teal-text confirmar modal-trigger">Reenviar</a> 
 	                    <a th:href= "@{|/autor/file/${trabalho.id}|}" class="teal-text">Ver envio</a>
-	     				<a th:if="${not evento.isPeriodoRevisao()}" th:href= "@{|/autor/revisao/trabalho/${trabalho.id}|}" class="teal-text confirmar modal-trigger">Ver revisões</a>              	                   
-	                    <a th:if="${trabalho.evento.isPeriodoFinal() AND #lists.size(trabalho.revisoes) == 0}" th:href="@{'/autor/revisao/trabalho/' + ${trabalho.id}}" class="btn disabled gray">Não revisado</a>
-						<a th:if="${trabalho.evento.isPeriodoInicial()}" th:attr="href='#modal' + ${trabalho.id}" class="red-text confirmar modal-trigger">Excluir</a>
+	     				<a th:if="${periodoFinal} and ${trabalho.status}" th:href= "@{|/autor/revisao/trabalho/${trabalho.id}|}" class="teal-text modal-trigger">Ver revisões</a>              	                   
+						<a th:if="${periodoInicial}" th:attr="href='#modal' + ${trabalho.id}" class="red-text confirmar modal-trigger">Excluir</a>
 	                  </div>
 	                </div>
 	              </div>     
