--- a/aplicacao/contest/src/main/resources/templates/secao/secaoTrabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/secao/secaoTrabalhos.html
@@ -46,7 +46,7 @@
 
 		<div class="row opcoes">
 			<a th:href="@{/eventoOrganizador}" style="color: #6a1b9a;">Meus
-				Eventos</a> <a th:href="@{/secao/paginaSecao}" style="color: #6a1b9a;">Seções</a>
+				Eventos</a> <a th:href="@{|/secao/${secao.evento.id}/paginaSecao|}" style="color: #6a1b9a;">Seções</a>
 			<a href="#modalAdicionarTrabalho" class="modal-trigger"
 				style="color: #6a1b9a;">Adicionar Trabalhos</a> <a
 				class=" btn-large waves-effect waves-light purple right white-text"
