Padronizacao de arquivos e nomenclaturas

--- a/aplicacao/contest/src/main/resources/templates/secao/sessao_cadastrar.html
+++ b/aplicacao/contest/src/main/resources/templates/secao/sessao_cadastrar.html
@@ -13,7 +13,7 @@
 
 		<div class="row opcoes">
 			<a th:href="@{|/secao/${evento.id}/|}" style="color: #6a1b9a;">Sessões</a>
-			<a th:href="@{|/secao/${evento.id}/cadastrarSecaoForm|}" style="color: #6a1b9a;">Cadastrar
+			<a th:href="@{|/secao/${evento.id}/adicionar|}" style="color: #6a1b9a;">Cadastrar
 				Sessão</a> <a
 				class=" btn-large waves-effect waves-light purple right white-text"
 				onclick="window.history.back()" alt="VOLTAR"> Voltar </a>
