--- a/aplicacao/contest/src/main/resources/templates/secao/sessao_listar_sessoes.html
+++ b/aplicacao/contest/src/main/resources/templates/secao/sessao_listar_sessoes.html
@@ -12,7 +12,7 @@
 
     <div class="row opcoes">
         <a th:href="@{/eventoOrganizador}" style="color: #6a1b9a;">Meus Eventos</a>
-        <a th:href="@{|/secao/${evento.id}/cadastrarSecaoForm|}" style="color: #6a1b9a;">Cadastrar Sessão</a>
+        <a th:href="@{|/secao/${evento.id}/adicionar|}" style="color: #6a1b9a;">Cadastrar Sessão</a>
     
     <a class=" btn-large waves-effect waves-light purple right white-text"  onclick="window.history.back()" alt="VOLTAR" >
 	       		Voltar
