Padronizacao de codigo e nomenclatura

--- a/aplicacao/contest/src/main/resources/templates/secao/sessao_cadastrar.html
+++ b/aplicacao/contest/src/main/resources/templates/secao/sessao_cadastrar.html
@@ -22,7 +22,7 @@
 		<div class="row">
 			<h1 class="center header">Cadastro de Sessão</h1>
 			<div class="col s12">
-				<form name="cadastroForm" th:action="@{|/secao/${evento.id}/cadastrarSecao|}"
+				<form name="cadastroForm" th:action="@{|/secao/${evento.id}/adicionar|}"
 					class="valign" method="post" id="formCadastro">
 
 					<div class="input-field">
