Padronizacao de codigo e nomenclatura

--- a/aplicacao/contest/src/main/resources/templates/secao/sessao_listar_sessoes.html
+++ b/aplicacao/contest/src/main/resources/templates/secao/sessao_listar_sessoes.html
@@ -36,7 +36,7 @@
             </div>
            
             <div class="card-action">
-                <a th:href="@{'/secao/secaoTrabalhos/'+${sessao.id}}" class="orange-text accent-3">Ver Sessão</a>
+                <a th:href="@{'/secao/ver/'+${sessao.id}}" class="orange-text accent-3">Ver Sessão</a>
                 <a th:href="@{'/secao/excluirSecao/'+${sessao.id}}"
                 class="orange-text accent-3 deleta_secao">Deletar Sessão</a>
             </div>
