--- a/aplicacao/contest/src/main/resources/templates/secao/sessao_ver_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/secao/sessao_ver_trabalhos.html
@@ -15,7 +15,7 @@
 			<h4>Adicionar Trabalho</h4>
 			<form class="col s12" th:action="@{/secao/adicionarTrabalhoSecao}"
 				method="post">
-				<input type="hidden" th:value="${secao.id}" th:name="idSecao" />
+				<input type="hidden" th:value="${secao.id}" th:name="idSessao" />
 				<div class="row">
 
 					<div class="row modal-form-row">
